--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/anitkumarsingh/event-graphQL-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.7.1",
+    "graphql": "^15.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
